--- a/src/main/resources/templates/inicioCoordinador.html
+++ b/src/main/resources/templates/inicioCoordinador.html
@@ -3,13 +3,54 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Procesos</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<form th:action="@{/expediente}">
-    <input type="submit" value="Ingresar a Expediente de Alumno">
-</form>
-<form th:action="@{/materias}">
-    <input type="submit" value="Informaci&oacute;n de materias cursadas">
-</form>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-between">
+	<a class="navbar-brand" href="#">
+		<img alt="logo" src="uca.jpg" style="width:40px;">
+	</a>
+	
+	<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    	<span class="navbar-toggler-icon"></span>
+  	</button>
+	
+	<div class="collapse navbar-collapse" id="collapsibleNavbar" >
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="#">Expedientes</a>
+			</li>
+			 <li class="nav-item dropdown">
+			     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+			       Catalogos
+			     </a>
+			    <div class="dropdown-menu">
+			        <a class="dropdown-item" href="#">Centros Escolares</a>
+			        <a class="dropdown-item" href="#">Materias</a>
+			        <a class="dropdown-item" href="#">Usuarios del Sistema</a>
+			    </div>
+			  </li>
+			  <li class="nav-item">
+			  	<a class="nav-link" href="#">Iniciar Sesion</a>
+			</li>			  
+		</ul>
+		
+	</div>
+</nav>
+<div class="container">
+	<div class="col-sm-2"></div>
+	<div class="col-sm-8">
+		<form th:action="@{/expediente}">
+		    <input type="submit" value="Ingresar a Expediente de Alumno" class="btn btn-primary">
+		</form>
+		<form th:action="@{/materias}">
+		    <input type="submit" value="Informaci&oacute;n de materias cursadas" class="btn btn-primary">
+		</form>
+	</div>
+	<div class="col-sm-2"></div>
+</div>
 </body>
 </html>
