--- a/src/main/resources/templates/expedienteAlumno.html
+++ b/src/main/resources/templates/expedienteAlumno.html
@@ -60,7 +60,7 @@
 		                    <input type="submit" value="Editar">
 		                </form>
 		                <form th:action="@{/materias}">
-		                    <input type="submit" value="Materias">
+		                    <input type="submit" value="Materias" class="btn btn-primary">
 		                </form>
 		            </th>
 		            <th th:text="${alumno.nombres}"/>
