--- a/src/main/resources/templates/listMateria.html
+++ b/src/main/resources/templates/listMateria.html
@@ -22,16 +22,17 @@
     <th:block th:each="alumnoM, row:${mat}">
         <tr>
             <th>
-            <form th:action="@{/editar}">
-                <input type="hidden" name="codigo" th:value="${alumnoM.catalogoMateria.codMateria}">
+            <form th:action="@{/editarMateria}">
+                <input type="hidden" name="codigo" th:value="${alumnoM.codigoMateria}">
+                <input type="hidden" name="codigoEstudiante" value="alumno.codigoEstudiante">
                 <input type="submit" value="Edit">
             </form>
             </th>
            <th th:text="${alumnoM.catalogoMateria.nomMateria}"/>
            <th th:text="${alumnoM.year}"/>
            <th th:text="${alumnoM.cicle}"/>
-            <th th:text="${alumnoM.nota}">
-            <th th:if="${alumnoM.resultado}"/>
+            <th th:text="${alumnoM.notaMateria}">
+            <th th:text="${alumnoM.resultado}"/>
         </tr>
     </th:block>
 </table>
