--- a/src/main/resources/templates/guardarMateria.html
+++ b/src/main/resources/templates/guardarMateria.html
@@ -37,6 +37,7 @@
 
 
     <input type="submit" value="Save"/><br>
+    <input type="hidden" name="codigo" th:value="${alumno.codigoEstudiante}">
 </form>
 </body>
 </html>
