--- a/src/main/resources/templates/listMateria.html
+++ b/src/main/resources/templates/listMateria.html
@@ -8,7 +8,8 @@
 
 <label>Alumno:</label>
 <th th:text="${alumno.nombres}"></th>
-<th th:text="${alumno.apellidos}"/> <br><br>
+<th th:text="${alumno.apellidos}"/>
+<br><br>
 <table>
     <thead>
     <th>Acción</th>
@@ -22,15 +23,15 @@
     <th:block th:each="alumnoM, row:${mat}">
         <tr>
             <th>
-            <form th:action="@{/editarMateria}">
-                <input type="hidden" name="codigo" th:value="${alumnoM.codigoMateria}">
-                <input type="hidden" name="codigoEstudiante" value="alumno.codigoEstudiante">
-                <input type="submit" value="Edit">
-            </form>
+                <form th:action="@{/editarMateria}">
+                    <input type="hidden" name="codigo" th:value="${alumnoM.codigoMateria}">
+                    <input type="hidden" name="codigoEstudiante" th:value="${alumno.codigoEstudiante}">
+                    <input type="submit" value="Edit">
+                </form>
             </th>
-           <th th:text="${alumnoM.catalogoMateria.nomMateria}"/>
-           <th th:text="${alumnoM.year}"/>
-           <th th:text="${alumnoM.cicle}"/>
+            <th th:text="${alumnoM.catalogoMateria.nomMateria}"/>
+            <th th:text="${alumnoM.year}"/>
+            <th th:text="${alumnoM.cicle}"/>
             <th th:text="${alumnoM.notaMateria}">
             <th th:text="${alumnoM.resultado}"/>
         </tr>
@@ -41,7 +42,7 @@
     <input type="hidden" name="codigo" th:value="${alumno.codigoEstudiante}">
     <input type="submit" value="Nueva Materia Cursada">
 </form>
-
+<p><a th:href="/buscar"/>Regresar</p>
 
 </body>
 </html>
