--- a/src/main/resources/templates/expedienteAlumno.html
+++ b/src/main/resources/templates/expedienteAlumno.html
@@ -14,7 +14,7 @@
     <th>Materias Reprobadas</th>
     <th>Promedio</th>
     </thead>
-    <th:block th:each="alumno, row: ${alumnos}">
+    <th:block th:each="alumno, iter: ${alumnos}">
         <tr>
             <th>
                 <form th:action="@{/editarAlumno}">
@@ -28,7 +28,8 @@
             </th>
             <th th:text="${alumno.nombres}"/>
             <th th:text="${alumno.apellidos}"/>
-
+            <th th:text="${aprobadas[iter.index]}"/>
+            <th th:text="${reprobadas[iter.index]}"/>
         </tr>
     </th:block>
 </table>
