--- a/src/main/resources/templates/listMateria.html
+++ b/src/main/resources/templates/listMateria.html
@@ -42,7 +42,7 @@
     <input type="hidden" name="codigo" th:value="${alumno.codigoEstudiante}">
     <input type="submit" value="Nueva Materia Cursada">
 </form>
-<p><a th:href="/buscar"/>Regresar</p>
+<p><a href="/expediente">Regresar</a></p>
 
 </body>
 </html>
