promedio de alumno

--- a/src/main/resources/templates/expedienteAlumno.html
+++ b/src/main/resources/templates/expedienteAlumno.html
@@ -30,6 +30,7 @@
             <th th:text="${alumno.apellidos}"/>
             <th th:text="${aprobadas[iter.index]}"/>
             <th th:text="${reprobadas[iter.index]}"/>
+            <th th:text="${promedio[iter.index]}"/>
         </tr>
     </th:block>
 </table>
