--- a/src/main/resources/templates/CatalogoCentrosEscolares.html
+++ b/src/main/resources/templates/CatalogoCentrosEscolares.html
@@ -43,6 +43,11 @@
 	</div>
 </nav>
 <div class="container">
+	<form th:action="@{/agregarCatCentros}">
+		<div class="form-group">
+			<input type="submit" value="Agregar Nuevo Centro Escolar" class="btn btn-primary">
+		</div>
+	</form>
 	<div class="table-responsive">
 		<table class="table table-striped table-bordered">
 			<thread class="thead-dark">
@@ -74,6 +79,11 @@
 		        </tr>
 		 </th:block>
 		</table>
+	<form th:action="@{/menuAdministrador}">
+		<div class="form-group">
+			<input type="submit" value="Regresar" class="btn btn-secondary">
+		</div>
+	</form>
 	</div>
 </div>
 </body>
