--- a/src/main/resources/templates/NuevoCatCentro.html
+++ b/src/main/resources/templates/NuevoCatCentro.html
@@ -46,35 +46,50 @@
 	<div class="row" >
 		<div class="col-sm-2"></div>
 		<div class="col-sm-8">
-			<h1>Iniciar Sesi&oacute;n</h1>
-			<form th:action="@{/login}"  method="post">
-			    <div class="form-group">
-				    <label>Nombre de usuario:</label>
-				    <input type="text" name="username" class="form-control">
-			    </div>
-			    <div class="form-group">
-				    <label>Contrase&ntilde;a:</label>
-				    <input type="password" name="password" class="form-control">
-			    </div>
-			    <input type="submit" value="Iniciar Sesi&oacute;n" class="btn btn-primary">
+			<form th:action="@{/saveCatCentro}" th:object="${centro}" method="post">
+			<div class="form-group">
+			<label class="label label-default">Ingresar Nuevo Centro Escolar</label>
+			</div>
+			<div class="form-group">
+			<label class="label label-default">Nombre de Centro Escolar: </label>
+			<input th:field="*{idInstitucion}" type="text">
+			</div>
+			<div class="form-group">
+			<label class="label label-default">Descripcion: </label>
+			<textarea th:field="*{descripcion}"></textarea>
+			</div>
+			<div class="form-group">
+			<label class="label label-default">Direccion: </label>
+			<input th:field="*{direccion}" type="text">
+			</div>
+			
+			<div class="form-group">
+			<label class="label label-default">Municipio: </label>
+			<select th:field="*{idMunicipio}">
+			
+			</select>
+			</div>
+			<div class="form-group">
+			<label class="label label-default">Departamento: </label>
+			<select>
+			
+			</select>
+			</div>
+			<div class="form-check">
+				<label class="label label-default">Estado: </label>
+			    <select th:field="*{estadoMateria}">
+			    	<option th:value="true" th:text="Activo"></option>
+			    	<option th:value="false" th:text="Inactivo"></option>
+			    </select>
+			</div> 
+			<div class="form-group">
+			<input type="submit" value="Guardar" class="btn btn-primary">
+			</div>
 			</form>
-				<br>
-			<div class="error" th:if="${param.error}" th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-            <p class="errorMsg"><span th:if="${errorMsg == 'Bad credentials'}" class="text-danger"> Credenciales incorrectas </span></p>
-	        </div>
-	        <div class="error" th:if="${param.error}" th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-	            <p class="errorMsg"><span th:if="${errorMsg == 'User is disabled'}" class="text-danger"> Cuenta inactiva </span></p>
-	        </div>
-	        <div class="error" th:if="${param.error}" th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-	            <p class="errorMsg"><span th:if="${errorMsg == 'Maximum sessions of 1 for this principal exceeded'}" class="text-danger"> Usted ya tiene una sesi&oacute;n activa </span></p>
-	        </div>
-	        <div th:if="${param.logout}">
-	            You have been logged out.
-	        </div>
-	        
-			</form>
-			<form th:action="@{/registrarse}" method="post">
-				<input type="submit" value="Registrarse" class="btn btn-primary">
+			<form th:action="@{/menuAdministrador}">
+				<div class="form-group">
+					<input type="submit" value="Regresar" class="btn btn-secondary">
+				</div>
 			</form>
 		</div>
 		<div class="col-sm-2"></div>
