--- a/src/main/resources/templates/NuevoCatMateria.html
+++ b/src/main/resources/templates/NuevoCatMateria.html
@@ -29,9 +29,9 @@
 			       Catalogos
 			     </a>
 			    <div class="dropdown-menu">
-			        <a class="dropdown-item" href="#">Centros Escolares</a>
-			        <a class="dropdown-item" href="#">Materias</a>
-			        <a class="dropdown-item" href="#">Usuarios del Sistema</a>
+			        <a class="dropdown-item" href="/catalogoCentrosE">Centros Escolares</a>
+			        <a class="dropdown-item" href="/catalogoMateria">Materias</a>
+			        <a class="dropdown-item" href="/catalogoUsuarios">Usuarios del Sistema</a>
 			    </div>
 			  </li>
 			  <li class="nav-item">
@@ -66,7 +66,7 @@
 			<input type="submit" value="Guardar" class="btn btn-primary">
 			</div>
 			</form>
-			<form th:action="@{/menuAdministrador}">
+			<form th:action="@{/catalogoMateria}">
 				<div class="form-group">
 					<input type="submit" value="Regresar" class="btn btn-secondary">
 				</div>
