--- a/src/main/resources/templates/inicioAdministrador.html
+++ b/src/main/resources/templates/inicioAdministrador.html
@@ -28,9 +28,9 @@
 			       Catalogos
 			     </a>
 			    <div class="dropdown-menu">
-			        <a class="dropdown-item" href="#">Centros Escolares</a>
-			        <a class="dropdown-item" href="#">Materias</a>
-			        <a class="dropdown-item" href="#">Usuarios del Sistema</a>
+			        <a class="dropdown-item" href="/catalogoCentrosE">Centros Escolares</a>
+			        <a class="dropdown-item" href="/catalogoMateria">Materias</a>
+			        <a class="dropdown-item" href="/catalogoUsuarios">Usuarios del Sistema</a>
 			    </div>
 			  </li>
 			  <li class="nav-item">
