--- a/src/main/resources/templates/NuevoCatUsuario.html
+++ b/src/main/resources/templates/NuevoCatUsuario.html
@@ -83,13 +83,13 @@
 			<div class="form-group">
 			<label class="label label-default">Municipio: </label>
 			<select th:field="*{municipio.idMunicipio}">
-				<option th:each="mun : ${municipio}" th:value="${mun.idMunicipio}" th:text="${mun.nombreMunicipio}"></option>
+				<option th:each="mun : ${municipios}" th:value="${mun.idMunicipio}" th:text="${mun.nombreMunicipio}"></option>
 			</select>
 			</div>
 			<div class="form-group">
 			<label class="label label-default">Departamento: </label>
-			<select th:fiel="*{departamento.idDepartamento}">
-				<option th:each="dep : ${departamento}" th:value="${dep.idDepartamento}" th:text="${dep.nombreDepartamento}"></option>
+			<select th:field="*{departamento.idDepartamento}">
+				<option th:each="dep : ${departamentos}" th:value="${dep.idDepartamento}" th:text="${dep.nombreDepartamento}"></option>
 			</select>
 			</div>
 			<div class="form-check">
