--- a/src/main/resources/templates/editarExpediente.html
+++ b/src/main/resources/templates/editarExpediente.html
@@ -53,7 +53,7 @@
 			    <div>
 			    <label>Nombres:</label>
 			    <input type="text" th:field="*{nombres}" class="form-control">
-			    <span th:errors="*{nombres}" class="invalid-feedback""></span>
+			    <span th:errors="*{nombres}" class="invalid-feedback"></span>
 			    </div>
 			    <div class="form-group">
 			    <label>Apellidos:</label>
