--- a/src/main/resources/templates/listMateria.html
+++ b/src/main/resources/templates/listMateria.html
@@ -71,7 +71,7 @@
 			           <th th:text="${alumnoM.catalogoMateria.nomMateria}"/>
 			           <th th:text="${alumnoM.year}"/>
 			           <th th:text="${alumnoM.cicle}"/>
-			            <th th:text="${alumnoM.nota}">
+			            <th th:text="${alumnoM.notaMateria}"/>
 			            <th th:text="${alumnoM.resultado}"/>
 			        </tr>
 			    </th:block>
